# PTDLKD

./: .gitignore  BaoCao_PhanTichDuLieu.docx  CONTEXT.md  MauBaoCao.docx  PLAN.md  README.md  pyproject.toml  ~$oCao_PhanTichDuLieu.docx
.cache/matplotlib/: fontlist-v3.11.0.json
app/: dashboard.py
config/: settings.yaml
reports/: business_questions.md  data_quality_report.md  executive_summary.md  recommendations.md
reports/tables/: cross_sell_candidates.csv  customer_frequency_distribution.csv  customer_summary.csv  discount_band_performance.csv  discount_exact_performance.csv  discount_region.csv  discount_state.csv  discount_sub_category.csv  discount_threshold_worklist.csv  high_sales_low_profit_customers.csv  loss_without_high_discount.csv  monthly_performance.csv  order_summary.csv  product_classification_matrix.csv  product_performance.csv  product_summary.csv  quarterly_performance.csv  region_performance.csv  region_sub_category_performance.csv  repeat_customer_summary.csv  segment_performance.csv  ship_mode_performance.csv  shipping_days_performance.csv  state_performance.csv  state_priority_worklist.csv  state_sub_category_performance.csv  sub_category_performance.csv  top_loss_products.csv  top_profit_customers.csv  top_profit_products.csv  top_sales_customers.csv  top_sales_products.csv  yearly_performance.csv  (+1 more)
scripts/: generate_report.py  inspect_template.py  run_dashboard.py  run_pipeline.py  validate_data.py
tests/: conftest.py  test_analysis.py  test_io.py  test_metrics.py  test_pipeline.py  test_transform.py  test_validation.py
(+11 files in other folders)
